<resources>

    <string name="txt_loyal_inc">2020 Loyal Pet, Inc.</string>
    <string name="text_sign_up_for_loyal">Sign-up for Loyal</string>
    <string name="text_self_invite_description">Track your pet\'s care at our hospital</string>
    <string name="btn_name_invite">Sign Up</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="link_www_loyal_pet">www.loyal.pet</string>

    <string name="msg_download_new_version">App is outdated. Please update it to the latest version.
    </string>
    <string name="msg_title_update_available">Update Available</string>
    <string name="msg_install_new_version">Install the newest version to proceed</string>
    <string name="msg_title_install_update">Update downloaded successfully</string>
    <string name="no_connection">No internet connection</string>
    <string name="msg_invite_sent">Invite Sent Successfully</string>
    <string name="msg_invite_sent_description">We have sent a download link for the Pet mobile app to the mobile phone provided by you</string>
    <string name="text_ok">OK</string>

    <!--login screen-->
    <string name="txt_login">Login</string>
    <string name="hint_password">Password</string>
    <string name="txt_password">Signing in …</string>
    <string name="txt_joining_loyal">Joining Loyal is by invitation only</string>
    <string name="btn_name_ok">OK</string>
    <string name="hint_input_email">Email / User Name</string>
    <string name="txt_provider_login">Provider Login</string>
    <string name="txt_welcome">Welcome to Loyal Pet</string>
    <string name="txt_pet_parent_registration">Pet Parent Registration</string>
    <string name="msg_empty_username">Email / User Name cannot be empty</string>
    <string name="msg_empty_password">Password cannot be empty</string>
    <string name="msg_invalid_credentials">Invalid username or password</string>
    <string name="msg_inactive_account">The account associated with this email address/username has been deactivated</string>
    <string name="msg_parent_already_exist_but_inactive_in_facility">This parent already exists with our facility. Please activate by visiting parent profile</string>

    <!-- common error codes -->
    <string name="error_common">Unknown error occurred</string>
    <string name="error_no_connection">No internet connection. Make sure that Wi-Fi or mobile data is turned on.
    </string>
    <string name="error_failed_to_connect_to_server">Failed to connect to server . Please try again.</string>
    <string name="error_timeout">Request timed out. Please check your internet connection</string>
    <string name="txt_logged_out">Session expired.You have been logged out from the system!</string>
    <string name="error_add_all_details_before_save">Please add relevant details before save messages.</string>

    <!-- Self Invite -->
    <string name="text_update">Update</string>
    <string name="msg_download_failed">Download failed</string>
    <string name="text_retry">RETRY</string>
    <string name="text_add">Add</string>
    <string name="text_cancel">Cancel</string>
    <string name="msg_parent_already_exist">User already exists with our facility</string>
    <string name="msg_parent_exist_with_another_facility">User is already a member with Loyal.
    Would you like to add this contact to your facility?</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_info">Info</string>
    <string name="msg_parent_inactive">This parent already exists with your facility. Please
        activate by visiting parent profile.</string>
    <string name="error_invalid_email_phone">is not a valid mobile number</string>
    <string name="error_email_phone_empty">Mobile number cannot be empty</string>
    <string name="txt_get_loyal">Find \"Loyal Pet\" in the app stores</string>

    <!-- edit pet card screen -->
    <string name="text_take_a_photo">Take a photo</string>
    <string name="text_choose_a_photo">Choose a photo</string>
    <string name="text_add_custom_message">Add Custom Message</string>
    <string name="txt_empty"></string>

    <string name="error_upload_failed">Upload failed</string>
    <string name="error_no_selected_ptb_message">Please select at least one message to proceed</string>
    <string name="text_add_new_message">Add new message</string>
    <string name="text_done">Done</string>
    <!--    main menu screen   -->
    <string name="txt_parent_sign_up">Parent Sign Up</string>
    <string name="txt_patient_cards">Tracking Board</string>
    <string name="txt_support">Support</string>
    <string name="txt_settings">Settings</string>
    <string name="text_character_remaining">character remaining</string>
    <string name="text_session_expired">Session Expired</string>

    <!-- settings screen -->
    <string name="hint_search_facility">Search…</string>
    <string name="txt_select_facility">Select Your Facility</string>
    <string name="txt_screen_timeout">Screen Timeout</string>
    <string name="txt_screen_timeout_no_auto_logout">No Auto Logout</string>
    <string name="txt_screen_timeout_never">Never</string>
    <string name="txt_screen_timeout_2_min">2 minutes</string>
    <string name="btn_name_apply">Apply</string>
    <string name="txt_confirm_application">Are you sure you want to confirm setting
        up Loyal Tablet Application for</string>
    <string name="text_error">Error</string>
    <string name="text_please_active_pet">is inactive. Please activate pet to update the procedure.</string>
    <string name="error_please_active_pet">is inactive. Please activate pet to update the messages.</string>
    <string name="error_active_parent">is inactive. Please activate parent to update the messages.</string>
    <string name="error_please_active_parent">is inactive. Please activate parent to update the procedure.</string>
    <string name="text_please_complete_ongoing_appointment">has an ongoing procedure. Please complete the ongoing procedure before starting a new procedure.</string>
    <string name="text_phase_change_failed">Phase change failed</string>
    <string name="msg_setup_facility_complete">Setup successful</string>

    <!--    patient cards screen -->
    <string name="msg_no_facility_selected">No facility selected</string>
    <string name="txt_filter_pet_cards">Filter by phase</string>
    <string name="txt_sort_pet_cards">Sort by</string>

    <!--helpscout-->
    <string name="help_scout_beacon_id">70c6d9e2-fdab-4049-8f1a-7ee15d60e478</string>
    <string name="text_10_photos_limit">You can add only 10 photos..</string>
    <string name="error_update_pet_cards">Updating pet cards on real time is not working.</string>

    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="msg_expected_phase">This action will reset all sent messages. Are you sure you want to continue?</string>
    <string name="title_confirm">Confirm</string>
    <string name="error_message_connot_empty">Message cannot be empty</string>
    <string name="error_message_please_apply">Please save custom message</string>
    <string name="text_confirm_message">The changes you have made will be lost if you navigate away from this page. Are you sure you want to leave this page?</string>
    <string name="error_permission_denied">Couldn\'t download image. permission denied.</string>
    <string name="text_mobile_phone">Mobile Number</string>
    <string name="error_socket_connection">Updating pet cards on real time is not working.</string>
    <string name="info_anyone_changed_card">The changes you have made will be lost as the appointment already updated</string>
    <string name="message_confirmation_move_phase">The changes you have made will be lost if you navigate away. Are you sure you want to leave this phase?</string>
    <string name="message_warning">Warning</string>
</resources>