<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="pet.loyal.provider.util.TextInputEditTextUtil" />
        <variable name="viewModel" type="pet.loyal.provider.view.selfinvite.SelfInviteViewModel"/>
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar android:id="@+id/toolBar"
                                       android:layout_width="match_parent"
                                       android:layout_height="?actionBarSize"
                                       style="@style/ToolBarMain"
                                       app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content">
            <ImageButton android:id="@+id/imgFacilityLogo"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@android:color/transparent"
                         android:src="@drawable/facility_logo_sample"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"/>

            <ImageButton android:id="@+id/btnHome"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="12dp"
                         android:background="@android:color/transparent"
                         android:src="@drawable/ic_home"
                         app:layout_constraintEnd_toStartOf="@id/btnLogout"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageButton android:id="@+id/btnLogout"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="12dp"
                         android:background="@android:color/transparent"
                         android:src="@drawable/ic_logout"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/toolBar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="17dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large_2"
                android:layout_marginBottom="@dimen/margin_large_3">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    style="@style/SelfInviteTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="24dp"
                    android:gravity="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/txtDescription"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="@dimen/margin_large_3"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/text_sign_up_for_loyal"/>
            <TextView
                    android:text="@string/text_self_invite_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtDescription"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    style="@style/SelfInviteDescriptionTextView"
                    app:layout_constraintTop_toBottomOf="@+id/textView6"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="@dimen/margin_large_2"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    style="@style/boxedTextFieldGrey"
                    app:layout_constraintTop_toBottomOf="@+id/txtDescription"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    app:errorEnabled="@{viewModel.isEmailPhoneError}"

                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/til_forgot_pw_email">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/textViewStyleSmall"
                        android:hint="Email or Phone Number"
                        android:text="@{viewModel.liveEmailOrPhone}"
                        android:inputType="textEmailAddress"
                        android:id="@+id/edtTxtMessage"/>

            </com.google.android.material.textfield.TextInputLayout>
            <Button
                    android:text="@string/btn_name_invite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_forgot_pw_send"
                    android:layout_marginTop="16dp"
                    style="@style/AppTheme.ButtonBlue"
                    app:layout_constraintTop_toBottomOf="@+id/til_forgot_pw_email"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    android:onClick="onClick"
                    android:enabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"/>

            <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressBar"
                    android:visibility="gone"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>